--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,8 @@ html, body {
     margin-top: 0.5em;
 }
 
+/* Button */
+
 .btn {
     display: inline-block;
     height: 48px;
@@ -165,4 +167,49 @@ html, body {
 .btn:active {
     position: relative;
     top: 1px;
+}
+
+/* General */
+
+.section {
+    padding: 70px 0;
+}
+
+.title-1 {
+    margin-bottom: 60px;
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 1.3;
+    color: var(--accent);
+    text-align: center;
+}
+
+/* Projects */
+
+.projects {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 30px;
+    row-gap: 30px;
+}
+
+.project {
+    min-width: 370px;
+    background-color: var(--white);
+    box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+
+}
+
+.project__img {
+    border-radius: 10px;
+}
+
+.project__title {
+    padding: 15px 20px 25px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.3;
+    color: var(--text-color);
 }
