--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,12 @@ html, body {
     max-width: 1200px;
 }
 
+.none {
+    display: none !important;
+}
+
+/* Nav */
+
 .nav {
     padding: 20px 0;
     border-bottom: 1px solid var(--dark-border);
@@ -212,4 +218,33 @@ html, body {
     font-size: 24px;
     line-height: 1.3;
     color: var(--text-color);
+}
+
+/* Footer */
+
+.footer {
+    padding: 60px 0 50px;
+    background-color: var(--dark-bg);
+    color: var(--white);
+}
+
+.footer__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 27px;
+}
+
+.social {
+    display: flex;
+    column-gap: 30px;
+    align-items: center;
+}
+
+.copywrite {
+    font-size: 16px;
+}
+
+.copywrite p + p {
+    margin-top: 0.5em;
 }
