--- a/css/main.css
+++ b/css/main.css
@@ -51,28 +51,6 @@ html, body {
     line-height: 1.3;
     font-weight: 700;
 }
-/* General */
-
-.section {
-    padding: 70px 0;
-}
-
-.title-1 {
-    margin-bottom: 60px;
-    font-size: 60px;
-    font-weight: 700;
-    line-height: 1.3;
-    color: var(--accent);
-    text-align: center;
-}
-
-.title-2 {
-    margin-bottom: 20px;
-    
-    font-size: 40px;
-    line-height: 1.3;
-    font-weight: 700;
-}
 
 .container {
     margin: 0 auto;
@@ -96,7 +74,7 @@ html, body {
 
 .nav-row {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     column-gap: 30px;
     row-gap: 20px;
@@ -104,6 +82,7 @@ html, body {
 }
 
 .logo {
+    margin-right: auto;
     color: var(--header-text);
     font-size: 24px;
     font-family: 'Poppins', sans-serif;
@@ -115,6 +94,8 @@ html, body {
 
 .nav-list {
     display: flex;
+    flex-wrap: wrap;
+    row-gap: 10px;
     align-items: center;
     column-gap: 40px;
     font-size: 16px;
@@ -258,6 +239,7 @@ html, body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     column-gap: 30px;
     row-gap: 30px;
 }
@@ -363,4 +345,66 @@ html, body {
 
 .copywrite p + p {
     margin-top: 0.5em;
+}
+
+@media (max-width: 620px) {
+    .header {
+        min-height: unset;
+    }
+
+    .header__title {
+        font-size: 30px;
+    }
+
+    .header__title strong {
+        font-size: 40px;
+    }
+
+    .section {
+        padding: 40px;
+    }
+
+    .title-1 {
+        margin-bottom: 30px;
+        font-size: 40px;
+    }
+
+    .title-2 {
+        margin-bottom: 10px;
+        font-size: 30px;
+    }
+
+    .content-list {
+        row-gap: 20px;
+    }
+
+    .content-list__item {
+        font-size: 16px;
+    }
+
+    .project__title {
+        font-size: 22px;
+    }
+
+    .project-details__desc {
+        margin-bottom: 20px;
+        font-size: 22px;
+    }
+
+    .footer {
+        padding: 40px 0 30px;
+    }
+
+    .footer__wrapper {
+        row-gap: 20px;
+    }
+
+    .social {
+        column-gap: 20px;
+    }
+
+    .social__item {
+        width: 28px;
+    }
+
 }
